# ConsoleRPG

./: CMakeLists.txt  GameManager.cpp  GameManager.h  main.cpp
Character/: Character.h  Player.cpp  Player.h
Character/Enemy/: Enemy.cpp  Enemy.h
Character/Ennemy/: Enemy.h
Character/Player/: Player.cpp  Player.h
EnemyWaves/: EnemyWave.cpp  EnemyWave.h
Items/: Item.cpp  Item.h
Source/: EnemyWave.h  EnemyWave.tpp  GameManager.cpp  GameManager.h  IWave.h  main.cpp
Source/Character/: Character.h  Enemy.cpp  Enemy.h  Goblin.cpp  Goblin.h  Player.cpp  Player.h  Slime.cpp  Slime.h
